--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@ant-design/icons": "5.0.1",
     "@reduxjs/toolkit": "1.9.3",
     "antd": "5.3.2",
+    "async-mutex": "0.4.0",
     "axios": "1.3.4",
     "moment": "^2.30.1",
     "react": "18.2.0",
+    "react-countup": "^6.5.0",
     "react-dom": "18.2.0",
     "react-icons": "4.8.0",
     "react-image-gallery": "1.2.11",
